--- a/todo/index.html
+++ b/todo/index.html
@@ -18,7 +18,7 @@
 <body>
     <div class="contaier">
         <nav class="navbar navbar-expand-sm">
-            <a class="navbar-brand" href="todo.html">
+            <a class="navbar-brand" href="index.html">
                 <i class="fas fa-clipboard-list"></i>
            </a>
            <span class="navbar-text text-dark">Do It!!!</span>
