--- a/todo/index.html
+++ b/todo/index.html
@@ -46,16 +46,16 @@
     <br>
     <br>
     <hr>
-    <dl>
-        <dt>Add Button</dt>
-        <dd>Add tasks to notcompleted list.</dd>
-        <dt>Check Button</dt>
-        <dd>Moves task from to notcompleted list to completed list.</dd>
-        <dt>Delete Button</dt>
-        <dd>Deletes the task after confirming.</dd>
-        <dt>Redo Button</dt>
-        <dd>Moves task from completed to notcompleted list with indication of showing redo button.</dd>
-    </dl>
+    
+    <div id="dl">
+        <dl>
+            <dt>Add Button</dt>
+            <dd>Add tasks to notcompleted list.</dd>
+            <dt>Check Button</dt><dd>Moves task from to notcompleted list to completed list.</dd>
+            <dt>Delete Button</dt><dd>Deletes the task after confirming.</dd>
+            <dt>Redo Button</dt><dd>Moves task from completed to notcompleted list with indication of showing redo button.</dd>
+        </dl>
+    </div>
     <br>
     <script src="todo.js"></script>
 </body>
