--- a/hotels(not responsive)/about.html
+++ b/hotels(not responsive)/about.html
@@ -16,7 +16,7 @@
         <div class="menu">
             <ul>
                 <li>
-                    <a href="home.html">Home</a>
+                    <a href="index.html">Home</a>
                 </li>
                 <li>
                     <a href="contact.html">Contact</a>
