--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -27,12 +27,15 @@
             <div class="col-8" id="questions">
                 <div id="question">
                 </div>
-                <ul id="options">
+                <div id="options">
+
+                </div>
+                <!--<ul id="options">
                     <li class="option"></li>
                     <li class="option"></li>
                     <li class="option"></li>
                     <li class="option"></li>
-                </ul>
+                </ul>-->
             </div>
             <div class="col-4">
                 buttons
