--- a/quiz/end.html
+++ b/quiz/end.html
@@ -19,9 +19,28 @@
                 <img src="badge.jpg">
             </div>
             <div class="col--md-5 col-lg-5 col-sm-12">
-                <h3>Thank You for spending you valuable time in attending the quiz.</h3>
+                <h3>Thank You for spending you valuable time in attempting the quiz.</h3>
                 <h2 id="username">Congratulations </h2>
                 <h4 id="tscore">You have scored 10 marks!!!</h4>
+                <div class="dropdown">
+                    <button type="button" id="drop" class="btn btn-primary dropdown-toggle" data-toggle="dropdown">Analysis</button>
+                    <div class="dropdown-menu bg-dark text-white">
+                        <ul>
+                            <li id="aq">
+                                Number of Questions attempted:
+                            </li>
+                            <li id="uq">
+                                Number of Questions not attempted:
+                            </li>
+                            <li id="cq">
+                                Number of Questions correct:
+                            </li>
+                            <li id="wq">
+                                Number of Questions wrong:
+                            </li>
+                        </ul>
+                    </div>
+                  </div>
                 <h5>For any queries please contact us</h5>
                 <form>
                     <label for="name" class="det">Name:</label><br>
@@ -38,6 +57,7 @@
         </div>
         
     </div>
+    <h6 id="footer">&copy sharath 2021  |  Design by sharath</h6>
     <script src="end.js"></script>
 </body>
 </html>
