--- a/quiz/index.html
+++ b/quiz/index.html
@@ -26,9 +26,9 @@
                 <li>No mark will be deducted for the not attempted questions.</li>
                 <li>You should attempt the question compulsorily if you have selected an option even at once.</li>
                 <li>To avoid negative marking you need to avoid selecting an option because there is no option to diselect the option apart from changing the option.</li>
-                <li>For your convenience, attempted questions are marked <b>green</b> and not attemptrd questions are marked <b>red</b> to segregate from them from unseen questions.</li>
+                <li>For your convenience, buttons of attempted questions are marked <b>green</b> and not attemptrd questions are marked <b>red</b> to segregate from them from unseen questions.</li>
                 <li>Buttons of the respected questions will be marked only when you click on "Save and Next Button".</li>
-                <li>You can also change between questions through buttons provided to the right of your screen.</li>
+                <li>You can also change between questions through buttons provided to the right of your screen, and to the top of screen on smaller devices.</li>
                 <li>Time limit for the quiz is <b><strong>3</strong></b> min.</li>    
             </ul>
         </div>
@@ -41,6 +41,7 @@
             <button class="btn btn-dark btn-md" id="start">Start Quiz</button>
         </div>
     </div>
+    <h6 id="footer">&copy sharath 2021  |  Design by sharath</h6>
     <script src="index.js"></script>
 </body>
 </html>
