--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -22,7 +22,7 @@
             </div>
             <div class="col-3" id="time"></div>
         </div>
-        <div class="row">
+        <div class="row" id="content">
             <div class="col-md-8 col-sm-12" id="questions">
                 <div id="question">
                 </div>
@@ -45,12 +45,12 @@
                         <div class="dropdown-menu bg-dark text-white">
                             <ul>
                                 <li>Quiz contains 10 questions.</li>
-                                <li>Each queston carries <b>Two(1)</b> mark.</li>
+                                <li>Each queston carries <b>Two(2)</b> mark.</li>
                                 <li>For each wrong answer <b>One(1)</b> mark will be deducted.</li>
                                 <li>No mark will be deducted for the not attempted questions.</li>
-                                <li>You should attempt the question compulsorily if you have selected an option even at once.</li>
-                                <li>To avoid negative marking you need to avoid selecting an option because there is no option to diselect the option apart from changing the option.</li>
-                                <li>You need to click on <b>"Save & Next Question"</b> button for saving the answer.</li>    
+                                <li>You need to click on <b>"Save & Next Question"</b> button for saving your answer.</li>
+                                <li>Buttons of the respected questions will be marked only when you click on "Save and Next Button".</li>
+                                <li>Time limit for the quiz is <b><strong>3</strong></b> min.</li>   
                             </ul> 
                             
                         </div>
@@ -87,6 +87,7 @@
         </div>  
         
     </div>
+    <h6 id="footer">&copy sharath 2021  |  Design by sharath</h6>
     <script src="quiz.js"></script>
 </body>
 </html>
