--- a/quiz/index.html
+++ b/quiz/index.html
@@ -24,8 +24,7 @@
                 <li>Each queston carries <b>Two(2)</b> mark.</li>
                 <li>For each wrong answer <b>One(1)</b> mark will be deducted.</li>
                 <li>No mark will be deducted for the not attempted questions.</li>
-                <li>You should attempt the question compulsorily if you have selected an option even at once.</li>
-                <li>To avoid negative marking you need to avoid selecting an option because there is no option to diselect the option apart from changing the option.</li>
+                <li>For dis selecting an option come back to the question then click on "Save & Next" Button without selectng any option.</li>
                 <li>For your convenience, buttons of attempted questions are marked <b>green</b> and not attemptrd questions are marked <b>red</b> to segregate from them from unseen questions.</li>
                 <li>Buttons of the respected questions will be marked only when you click on "Save and Next Button".</li>
                 <li>You can also change between questions through buttons provided to the right of your screen, and to the top of screen on smaller devices.</li>
