--- a/quiz/quiz.html
+++ b/quiz/quiz.html
@@ -39,7 +39,6 @@
             <div class="col-md-4 col-sm-12">
                 <div class="instructions">
                     <div id="username">Hello </div>
-                    <!--<div class="heading"><i><b>Instructions</b></i></div>-->
                     <div class="dropdown">
                         <button type="button" id="drop" class="btn btn-info dropdown-toggle" data-toggle="dropdown">Instructions</button>
                         <div class="dropdown-menu bg-dark text-white">
@@ -48,9 +47,9 @@
                                 <li>Each queston carries <b>Two(2)</b> mark.</li>
                                 <li>For each wrong answer <b>One(1)</b> mark will be deducted.</li>
                                 <li>No mark will be deducted for the not attempted questions.</li>
+                                <li>For dis selecting an option come back to the question then click on "Save & Next" Button without selectng any option.</li>
                                 <li>You need to click on <b>"Save & Next Question"</b> button for saving your answer.</li>
-                                <li>Buttons of the respected questions will be marked only when you click on "Save and Next Button".</li>
-                                <li>Time limit for the quiz is <b><strong>3</strong></b> min.</li>   
+                                <li>Buttons of the respected questions will be marked only when you click on "Save and Next Button".</li>  
                             </ul> 
                             
                         </div>
@@ -63,8 +62,6 @@
                         <button id="btn3" onclick="btn3q()">3</button>
                         <button id="btn4" onclick="btn4q()">4</button>
                         <button id="btn5" onclick="btn5q()">5</button>
-                    <!--</div>-->
-                    <!--<div class="col-md-12 col-sm-12" class="row2">-->
                         <button id="btn6" onclick="btn6q()">6</button>
                         <button id="btn7" onclick="btn7q()">7</button>
                         <button id="btn8" onclick="btn8q()">8</button>
